--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "autobase-twitter",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
     "dev": "node app.js"
